Code review corrections
● Line 22:30 - The content should be aligned with flexbox

● Line 43 - This should be a section tag

● Background and social media icons was added

● Overlapping fixed

--- a/style.css
+++ b/style.css
@@ -34,21 +34,31 @@ header {
   background-color: white;
 }
 
-.nav__links,
-li {
-  padding: 5px 0;
-  text-align: start;
-}
-
 .links {
   position: fixed;
-  padding: 30px 0 50px 30px;
   display: none;
+  padding: 30px 0 0 0;
   box-shadow: 0 0 30px 10px rgba(0, 0, 0, 0.12);
   border-radius: 0 0 15px 15px;
   width: 100%;
   background-color: white;
   z-index: 9999;
+}
+
+.nav__links {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+li,
+a {
+  padding: 10px 0;
+}
+
+ul.nav__links {
+  padding: 0 0 30px 0;
 }
 
 #toolbartitle {
@@ -129,7 +139,7 @@ a:hover {
   background-image: url(img/vector2.png);
   background-size: auto;
   background-repeat: no-repeat;
-  padding: 100px;
+  padding: 40px;
   top: 63%;
 }
 
@@ -171,7 +181,7 @@ a:hover {
   left: 8%;
   top: 26%;
   opacity: 50%;
-  z-index: 0;
+  z-index: 1;
 }
 
 #vector6 {
